Page Content with HTML

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <title>DIGICON</title>
     <meta charset="utf-8" />
 
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    /> -->
+    <meta
+     name="viewport" content="width=device-width,
+     initial-scale=1, maximum-scale=1, user-scalable=no"
+     />
 
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
@@ -20,6 +24,223 @@
     <meta name="msapplication-TileImage" content="" />
   </head>
   <body>
-    <div></div>
+    <div class="wrapper">
+      <section class="hero">
+        
+        <nav class="main-nav" id="hide">
+          <img src="/assets/images/DIGISOL..svg" alt="">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+        <a href="#" class="btn" onclick="">Menu</a>
+        </nav>
+        <header class="mainsection">
+          <h1>Future Focused</h1>
+          <h2>Marketing Agency</h2>
+          <p>Grow your business and boost up sale.</p>
+          <a href="#" class="btn">Explore us</a>
+        </header>
+        <img src="/assets/images/Client logo.png" alt="Client Logo">
+      </section>
+
+      <section id="section-a">
+        <p></p>
+        <h2>Our Agency Providing</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+           Alias hic saepe dicta corporis unde enim.
+        </p>
+      </section>
+
+      <section id="section-b">
+        <div class="box-b box-b1">
+          <img src="/assets/images/Group 444.svg" alt="Strategy" class="strat">
+          <h2>BUSINESS STRATEGY</h2>
+          <p>Lorem ipsum dolor sit consetetur diam sadipscing elitr,
+             sed diam nonumy eirmod tempor invidunt aliquyam erat, sed diam
+          </p>
+        </div>
+        <div class="box-b box-b2">
+          <img src="/assets/images/Group 442.svg" alt="Analysis" class="anal">
+          <h2>ADVANCE ANALYSIS</h2>
+          <p>Lorem ipsum dolor sit consetetur diam sadipscing elitr,
+             sed diam nonumy eirmod tempor invidunt aliquyam erat, sed diam
+          </p>
+        </div>
+        <div class="box-b box-b3">
+          <img src="/assets/images/Group 443.svg" alt="Marketing" class="cont">
+          <h2>CONTENT MARKETING</h2>
+          <p>Lorem ipsum dolor sit consetetur diam sadipscing elitr,
+             sed diam nonumy eirmod tempor invidunt aliquyam erat, sed diam
+          </p>
+        </div>
+      </section>
+
+      <section id="section-c">
+        <div class="box-c1">
+          <div class="box-c1-img">
+            <img src="/assets/images/Analysis illustration.svg" alt="">
+          </div>
+          <div class="box-c1-text">
+            <p class="ill-bold">Business opportunities </p>
+            <p class="ill-light">Analysis</p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+               Commodi culpa quia libero perspiciatis harum,
+               quos eius fuga neque quis nesciunt dignissimos nihil doloremque maxime esse!
+            </p>
+            <p class="ill-text">Eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+               sed diam voluptua. At vero eos nonumy eirmod tempor.
+            </p>
+          </div>
+        </div>
+        <div class="box-c2">
+            <div class="box-c2-text">
+              <p class="ill-bold">Clients we propelled</p>
+              <p class="ill-light">Sky High</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Suscipit aliquam eaque repudiandae, modi illum quod aliquid,
+                  eveniet veritatis qui ut possimus iure atque minus quibusdam.
+              </p>
+              <p class="ill-text">Eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+                  sed diam voluptua. At vero eos nonumy eirmod tempor.
+              </p>
+            </div>
+            <div class="box-c2-img">
+                <img src="/assets/images/Client sky high illustration.svg" alt="">
+            </div>
+        </div>
+      </section>
+       
+      <section id="section-d">
+        <h2>Our Case Studies</h2>
+        <p>Lorem ipsum dolor sit amet consectetur,
+           adipisicing elit. Eos voluptatem dolorem sed corporis,
+           culpa corrupti?
+        </p>
+      </section>
+
+      <section id="section-e">
+        <div class="card">
+          <img src="/assets/images/517904-PISH00-920.png" alt="">
+          <div>
+              <h3>Business Solution Process</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                 sed diam nonumy eirmod. Eirmod tempor invint ut labore
+                </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/assets/images/517904-PISH00-920.png" alt="">
+          <div>
+              <h3>Marketing Strategy</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                 sed diam nonumy eirmod. Eirmod tempor invint ut labore
+                </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="/assets/images/415468-PDXQUO-338.png" alt="">
+          <div>
+              <h3>How We Research Market?</h3>
+              <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                 sed diam nonumy eirmod. Eirmod tempor invint ut labore
+              </p>
+          </div>
+        </div>
+        <a href="#" class="btn more">See More</a>
+      </section>
+
+      <section id="section-f">
+        <div class="members">
+          <div class="mem1">
+
+          </div>
+
+          <div class="mem2">
+
+          </div>
+          <div class="mem3">
+
+          </div>
+          <div class="awesome">
+            <p>
+              <span>Some Awesome</span><br>
+              <span>Word</span>
+            </p>
+            <span > <hr style="height: 5px; width: 2em; background: red;"> </span>
+          </div>
+        </div>
+
+        <div class="message">
+          <div class="msg-form">
+            <form action="">
+                <input type="mail" placeholder="Your mail*" required>
+                <input type="text" placeholder="Subject*" required>
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <a href="#" class="btn">Send Request</a>
+              </form>
+          </div>
+          <div class="msg-intro">
+            <p>
+             <span>Let's Talk about</span><br>
+            <span>Everything!</span>
+            </p>
+            <span > <hr style="height: 5px; width: 2em; background: red;"> </span>
+            <p></p>
+          </div>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+           sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+           diam voluptua. At vero eos
+        </div>
+      </section>
+
+      <section id="section-g">
+        <h2 class="subscribe"> <span>Subscribe Newsletter & Get</span><br>
+          <span>Resources</span>
+        </h2>
+        <input type="mail" name="" id="">
+        <a href="#" class="btn">Subscribe</a>
+      </section>
+
+      <section id="section-h">
+        <div>
+          <img src="/assets/images/Group 447.svg" alt="logo">
+          <p>digisol.co@mail.com</p>
+          <p>087-552.485.65</p>
+        </div>
+        <div>
+          <h3>Services</h3>
+          <ul>
+            <li><a href="#">Digital Marketing</a></li>
+            <li><a href="#">Business Analysis</a></li>
+            <li><a href="#">Content</a></li>
+            <li><a href="#">Wordpress</a></li>
+            <li><a href="#"></a>Social Activation</li>
+          </ul>
+        </div>
+        <div>
+            <h3>About Us</h3>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+            </ul>
+        </div>
+        <div>
+            <h3>Our Address</h3>
+            <p>59/B Jonson Road Ave,<br> New York, USA</p>
+            <p>Email: support@digi.com</p>
+        </div>
+      </section>
+
+      <footer>
+        <p>Designed with love and CSS by @curlybraces. Copyright DevHal &copy; 2019.</p>
+      </footer>
+    </div>
   </body>
 </html>
